# 42_call_me_maybe

./: .gitignore  Makefile  main.py  note.txt  pyproject.toml  test_tokenization.py
data/exercise_output/: function_calling_results.json
src/: __main__.py  main.py
